[package]
name = "serverhud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cfa635 = { git = "https://github.com/agausmann/cfa635-rs.git" }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.23"
toml = "0.5"
